--- a/src/main/resources/Common/UI/Custom/Pages/Inventory/InventoryPage.ui
+++ b/src/main/resources/Common/UI/Custom/Pages/Inventory/InventoryPage.ui
@@ -1,47 +1,40 @@
 $C = "../../Commons.ui";
+$M = "../Shared/MenuBar.ui";
 
 Group #MainContainer {
   Anchor: (Top: 0, Left: 0, Right: 0, Bottom: 0);
-  Background: #000000(0.52);
-  LayoutMode: Center;
+  Background: #000000(0.58);
 
-  Group #Frame {
-    Anchor: (Width: 1100, Height: 640);
-    LayoutMode: Top;
-    Padding: (Full: 12);
-    Background: $C.@HytaleContainerBackground;
-
-    Group #Header {
-      Anchor: (Height: 44);
-      Background: $C.@HytaleHeaderBackground;
-      Padding: (Left: 12, Right: 12);
-
-      Label {
-        Text: "INVENTAIRE";
-        Style: (FontName: "Secondary", FontSize: 20, RenderBold: true, RenderUppercase: true, LetterSpacing: 1, Alignment: Center, TextColor: #d2bc90);
-      }
-    }
-
-    $C.@SmallSpacer {}
-
-    Group #TabRow {
-      Anchor: (Height: 36);
-      LayoutMode: Left;
-      Background: #101820(0.35);
-      Padding: (Left: 8, Right: 8);
-
+  $M.@TopBar #TopBar {
+    #TopBarTabs {
       TextButton #TabInventory {
         Text: "Inventaire";
-        Style: (...$C.@MainButtonStyle);
-        Anchor: (Width: 140, Height: 34);
+        Style: (...$M.@TopTabButtonActiveStyle);
+        Anchor: (Width: 220, Height: 79);
       }
-
-      $C.@SmallSpacer {}
 
       TextButton #TabCharacteristics {
         Text: "Caracteristiques";
-        Style: (...$C.@MainButtonStyle);
-        Anchor: (Width: 168, Height: 34);
+        Style: (...$M.@TopTabButtonStyle);
+        Anchor: (Width: 260, Height: 79);
+      }
+    }
+  }
+
+  Group #Frame {
+    Anchor: (Top: 92, Bottom: 24, Horizontal: 30);
+    LayoutMode: Top;
+    Padding: (Full: 10);
+    Background: (TexturePath: "../../Commons/HyMenu/Container/ContainerFullPatch.png", HorizontalBorder: 30, VerticalBorder: 30);
+
+    Group #Header {
+      Anchor: (Height: 54);
+      Background: (TexturePath: "../../Commons/HyMenu/Container/ContainerHeaderStyled.png", HorizontalBorder: 50, VerticalBorder: 0);
+      Padding: (Left: 16, Right: 16);
+
+      Label {
+        Text: "INVENTAIRE";
+        Style: (FontName: "Secondary", FontSize: 22, RenderBold: true, RenderUppercase: true, LetterSpacing: 1, Alignment: Center, TextColor: #d2bc90);
       }
     }
 
@@ -61,7 +54,7 @@ Group #MainContainer {
           FlexWeight: 31;
           LayoutMode: Top;
           Padding: (Full: 10);
-          Background: $C.@HytalePanelBackground;
+          Background: (TexturePath: "../../Commons/HyMenu/Container/ContainerPanelPatch.png", Border: 4);
 
           Label #EquipmentTitle {
             Text: "EQUIPEMENT";
@@ -78,17 +71,17 @@ Group #MainContainer {
               Anchor: (Width: 62);
               LayoutMode: Top;
 
-              ItemGrid #EquipTrophy1Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); }
+              ItemGrid #EquipTrophy1Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); }
               $C.@SmallSpacer {}
-              ItemGrid #EquipTrophy2Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); }
+              ItemGrid #EquipTrophy2Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); }
               $C.@SmallSpacer {}
-              ItemGrid #EquipTrophy3Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); }
+              ItemGrid #EquipTrophy3Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); }
               $C.@SmallSpacer {}
-              ItemGrid #EquipTrophy4Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); }
+              ItemGrid #EquipTrophy4Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); }
               $C.@SmallSpacer {}
-              ItemGrid #EquipTrophy5Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); }
+              ItemGrid #EquipTrophy5Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); }
               $C.@SmallSpacer {}
-              ItemGrid #EquipTrophy6Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); }
+              ItemGrid #EquipTrophy6Grid { Anchor: (Height: 44); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 42, SlotIconSize: 34, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); }
             }
 
             $C.@SmallSpacer {}
@@ -102,31 +95,31 @@ Group #MainContainer {
 
               Group { Anchor: (Height: 60); LayoutMode: Left;
                 Group { Anchor: (Width: 62, Height: 56); }
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipHeadIcon { Anchor: (Width: 28, Height: 28, Top: 12); Background: "../../Commons/Equipments/Helmet.png"; } ItemGrid #EquipHeadGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipHeadIcon { Anchor: (Width: 28, Height: 28, Top: 12); Background: "../../Commons/Equipments/Helmet.png"; } ItemGrid #EquipHeadGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
                 Group { Anchor: (Width: 62, Height: 56); }
               }
 
               Group { Anchor: (Height: 60); LayoutMode: Left;
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipWeaponIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Weapon.png"; } ItemGrid #EquipWeaponGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipAmuletIcon { Anchor: (Width: 24, Height: 24, Top: 15); Background: "../../Commons/Equipments/Amulet.png"; } ItemGrid #EquipAmuletGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipGauntletsIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Gauntlets.png"; } ItemGrid #EquipGauntletsGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipWeaponIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Weapon.png"; } ItemGrid #EquipWeaponGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipAmuletIcon { Anchor: (Width: 24, Height: 24, Top: 15); Background: "../../Commons/Equipments/Amulet.png"; } ItemGrid #EquipAmuletGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipGauntletsIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Gauntlets.png"; } ItemGrid #EquipGauntletsGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
               }
 
               Group { Anchor: (Height: 60); LayoutMode: Left;
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipRing1Icon { Anchor: (Width: 24, Height: 24, Top: 15); Background: "../../Commons/Equipments/Ring.png"; } ItemGrid #EquipRing1Grid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipChestIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Chest.png"; } ItemGrid #EquipChestGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipRing2Icon { Anchor: (Width: 24, Height: 24, Top: 15); Background: "../../Commons/Equipments/Ring.png"; } ItemGrid #EquipRing2Grid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipRing1Icon { Anchor: (Width: 24, Height: 24, Top: 15); Background: "../../Commons/Equipments/Ring.png"; } ItemGrid #EquipRing1Grid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipChestIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Chest.png"; } ItemGrid #EquipChestGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipRing2Icon { Anchor: (Width: 24, Height: 24, Top: 15); Background: "../../Commons/Equipments/Ring.png"; } ItemGrid #EquipRing2Grid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
               }
 
               Group { Anchor: (Height: 60); LayoutMode: Left;
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipPantsIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Pants.png"; } ItemGrid #EquipPantsGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipBeltIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Belt.png"; } ItemGrid #EquipBeltGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipBootsIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Boots.png"; } ItemGrid #EquipBootsGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipPantsIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Pants.png"; } ItemGrid #EquipPantsGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipBeltIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Belt.png"; } ItemGrid #EquipBeltGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipBootsIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Boots.png"; } ItemGrid #EquipBootsGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
               }
 
               Group { Anchor: (Height: 60); LayoutMode: Left;
                 Group { Anchor: (Width: 62, Height: 56); }
-                Group { Anchor: (Width: 62, Height: 56); Group #EquipPetIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Pet.png"; } ItemGrid #EquipPetGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/Hytale/SlotBackground.png"); } }
+                Group { Anchor: (Width: 62, Height: 56); Group #EquipPetIcon { Anchor: (Width: 26, Height: 26, Top: 14); Background: "../../Commons/Equipments/Pet.png"; } ItemGrid #EquipPetGrid { Anchor: (Width: 56, Height: 56); SlotsPerRow: 1; AreItemsDraggable: true; DisplayItemQuantity: true; RenderItemQualityBackground: true; ShowScrollbar: false; Style: (SlotSize: 56, SlotIconSize: 46, SlotSpacing: 4, SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"); } }
                 Group { Anchor: (Width: 62, Height: 56); }
               }
             }
@@ -140,7 +133,7 @@ Group #MainContainer {
           FlexWeight: 50;
           LayoutMode: Top;
           Padding: (Full: 10);
-          Background: $C.@HytalePanelBackground;
+          Background: (TexturePath: "../../Commons/HyMenu/Container/ContainerPanelPatch.png", Border: 4);
 
           Label #InventoryTitle {
             Text: "SACS";
@@ -169,7 +162,7 @@ Group #MainContainer {
                 SlotSize: 46,
                 SlotIconSize: 36,
                 SlotSpacing: 4,
-                SlotBackground: "../../Commons/Hytale/SlotBackground.png"
+                SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"
               );
             }
 
@@ -192,7 +185,7 @@ Group #MainContainer {
                 SlotSize: 46,
                 SlotIconSize: 36,
                 SlotSpacing: 4,
-                SlotBackground: "../../Commons/Hytale/SlotBackground.png"
+                SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"
               );
             }
           }
@@ -222,7 +215,7 @@ Group #MainContainer {
           FlexWeight: 24;
           LayoutMode: Top;
           Padding: (Full: 10);
-          Background: $C.@HytalePanelBackground;
+          Background: (TexturePath: "../../Commons/HyMenu/Container/ContainerPanelPatch.png", Border: 4);
 
           Label #LootTitle {
             Text: "BUTIN";
@@ -242,7 +235,7 @@ Group #MainContainer {
               SlotSize: 44,
               SlotIconSize: 36,
               SlotSpacing: 4,
-              SlotBackground: "../../Commons/Hytale/SlotBackground.png"
+              SlotBackground: "../../Commons/HyMenu/Tiles/SlotDefault.png"
             );
           }
 
